syntax = "proto3";

option csharp_namespace = "TodoCsLib";
option go_package = "https://github.com/sjohnson-pplsi/todo-service/modules/togo-go-lib";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
